--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\navjo\AppData\Local\Temp\testng-eclipse--975268835\testng-customsuite.xml</span>
+                    <span>C:\Users\navjo\AppData\Local\Temp\testng-eclipse--1988673793\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.naveenautomation.Tests.MyAccountInformationTest" class="method navigator-link" hash-for-method="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(Navjot.rehal12@gmail.com, Navjot13, Navjot, Singh, Navjot.rehal12@gmail.com, 4372174449)">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(Navjot.rehal12@gmail.com, Navjot13, Navjot, Singh, Navjot.rehal12@gmail.com, 4372174449)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.naveenautomation.Tests.MyAccountInformationTest" class="method navigator-link" hash-for-method="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(neethu123@gmail.com, password@01, Neethu, Manu, neethu123@gmail.com, 9876543210)">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(neethu123@gmail.com, password@01, Neethu, Manu, neethu123@gmail.com, 9876543210)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.naveenautomation.Tests.MyAccountInformationTest" class="method navigator-link" hash-for-method="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(sg1@gmail.com, Admin@123, Sahib, New, Sg1@gmail.com, 5146217769)">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(sg1@gmail.com, Admin@123, Sahib, New, Sg1@gmail.com, 5146217769)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.naveenautomation.Tests.MyAccountInformationTest" class="method navigator-link" hash-for-method="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(harinder21@gmail.com, Password1, Harinder, Kaur, Harinder21@gmail.com, 780298456)">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(harinder21@gmail.com, Password1, Harinder, Kaur, Harinder21@gmail.com, 780298456)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.naveenautomation.Tests.MyAccountInformationTest" class="method navigator-link" hash-for-method="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(iron.man@gmail.com, Password2, Tony, Stark, iron.man@gmail.com, 1123456780)">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(iron.man@gmail.com, Password2, Tony, Stark, iron.man@gmail.com, 1123456780)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.demoqa.Tests.UploadsDownloadsTest" class="method navigator-link" hash-for-method="verifyUserIsAbleTODownloadFile">verifyUserIsAbleTODownloadFile</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,47 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.naveenautomation.Tests.MyAccountInformationTest</span>
+              <span class="class-name">com.demoqa.Tests.UploadsDownloadsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(Navjot.rehal12@gmail.com, Navjot13, Navjot, Singh, Navjot.rehal12@gmail.com, 4372174449)">
-                  </a> <!-- verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(Navjot.rehal12@gmail.com, Navjot13, Navjot, Singh, Navjot.rehal12@gmail.com, 4372174449) -->
-                  <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</span>
-                  <span class="parameters">(Navjot.rehal12@gmail.com, Navjot13, Navjot, Singh, Navjot.rehal12@gmail.com, 4372174449)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(neethu123@gmail.com, password@01, Neethu, Manu, neethu123@gmail.com, 9876543210)">
-                  </a> <!-- verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(neethu123@gmail.com, password@01, Neethu, Manu, neethu123@gmail.com, 9876543210) -->
-                  <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</span>
-                  <span class="parameters">(neethu123@gmail.com, password@01, Neethu, Manu, neethu123@gmail.com, 9876543210)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(sg1@gmail.com, Admin@123, Sahib, New, Sg1@gmail.com, 5146217769)">
-                  </a> <!-- verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(sg1@gmail.com, Admin@123, Sahib, New, Sg1@gmail.com, 5146217769) -->
-                  <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</span>
-                  <span class="parameters">(sg1@gmail.com, Admin@123, Sahib, New, Sg1@gmail.com, 5146217769)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(harinder21@gmail.com, Password1, Harinder, Kaur, Harinder21@gmail.com, 780298456)">
-                  </a> <!-- verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(harinder21@gmail.com, Password1, Harinder, Kaur, Harinder21@gmail.com, 780298456) -->
-                  <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</span>
-                  <span class="parameters">(harinder21@gmail.com, Password1, Harinder, Kaur, Harinder21@gmail.com, 780298456)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(iron.man@gmail.com, Password2, Tony, Stark, iron.man@gmail.com, 1123456780)">
-                  </a> <!-- verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(iron.man@gmail.com, Password2, Tony, Stark, iron.man@gmail.com, 1123456780) -->
-                  <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</span>
-                  <span class="parameters">(iron.man@gmail.com, Password2, Tony, Stark, iron.man@gmail.com, 1123456780)</span>
+                  <a name="verifyUserIsAbleTODownloadFile">
+                  </a> <!-- verifyUserIsAbleTODownloadFile -->
+                  <span class="method-name">verifyUserIsAbleTODownloadFile</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -190,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\navjo\AppData\Local\Temp\testng-eclipse--975268835\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\navjo\AppData\Local\Temp\testng-eclipse--1988673793\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -199,11 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.naveenautomation.Tests.MyAccountInformationTest&quot;&gt;
+      &lt;class name=&quot;com.demoqa.Tests.UploadsDownloadsTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers&quot;/&gt;
+          &lt;include name=&quot;verifyUserIsAbleTODownloadFile&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.naveenautomation.Tests.MyAccountInformationTest --&gt;
+      &lt;/class&gt; &lt;!-- com.demoqa.Tests.UploadsDownloadsTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -243,32 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers')
-data.setCell(0, 2, 'com.naveenautomation.Tests.MyAccountInformationTest')
-data.setCell(0, 3, 2114);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers')
-data.setCell(1, 2, 'com.naveenautomation.Tests.MyAccountInformationTest')
-data.setCell(1, 3, 1964);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers')
-data.setCell(2, 2, 'com.naveenautomation.Tests.MyAccountInformationTest')
-data.setCell(2, 3, 1618);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers')
-data.setCell(3, 2, 'com.naveenautomation.Tests.MyAccountInformationTest')
-data.setCell(3, 3, 1489);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers')
-data.setCell(4, 2, 'com.naveenautomation.Tests.MyAccountInformationTest')
-data.setCell(4, 3, 1489);
+data.setCell(0, 1, 'verifyUserIsAbleTODownloadFile')
+data.setCell(0, 2, 'com.demoqa.Tests.UploadsDownloadsTest')
+data.setCell(0, 3, 3059);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -283,9 +214,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.demoqa.Tests.UploadsDownloadsTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyuploadFunctionality</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -294,66 +232,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.naveenautomation.Tests.MyAccountInformationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.demoqa.Tests.UploadsDownloadsTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(iron.man@gmail.com, Password2, Tony, Stark, iron.man@gmail.com, 1123456780)</span>
-                <span class="method-start">7520 ms</span>
+                <span class="method-name">verifyUserIsAbleTODownloadFile</span>
+                <span class="method-start">4546 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">9011 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">9129 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(harinder21@gmail.com, Password1, Harinder, Kaur, Harinder21@gmail.com, 780298456)</span>
-                <span class="method-start">15235 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">17349 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">17385 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(Navjot.rehal12@gmail.com, Navjot13, Navjot, Singh, Navjot.rehal12@gmail.com, 4372174449)</span>
-                <span class="method-start">23469 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">25088 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">25133 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(sg1@gmail.com, Admin@123, Sahib, New, Sg1@gmail.com, 5146217769)</span>
-                <span class="method-start">30952 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">32441 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">32554 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(neethu123@gmail.com, password@01, Neethu, Manu, neethu123@gmail.com, 9876543210)</span>
-                <span class="method-start">40408 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">42372 ms</span>
+                <span class="method-start">7608 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
