--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">23,065</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43,461</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.demoqa.Tests.UploadsDownloadsTest</td><td><a href="#m0">verifyUserIsAbleTODownloadFile</a></td><td rowspan="1">1674750574862</td><td rowspan="1">3068</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.demoqa.Tests.UploadsDownloadsTest</td><td><a href="#m0">verifyUserIsAbleTODownloadFile</a></td><td rowspan="1">1674786080459</td><td rowspan="1">3058</td></tr><tr class="passedeven"><td><a href="#m1">verifyuploadFunctionality</a></td><td rowspan="1">1674786103052</td><td rowspan="1">59</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.demoqa.Tests.UploadsDownloadsTest#verifyUserIsAbleTODownloadFile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.demoqa.Tests.UploadsDownloadsTest#verifyUserIsAbleTODownloadFile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.demoqa.Tests.UploadsDownloadsTest#verifyuploadFunctionality</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
