--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,34 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountInformationTest.verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(java.lang.String,java.lang.String)[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</td> 
-  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountInformationTest.verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(java.lang.String,java.lang.String)[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</td> 
-  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountInformationTest.verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(java.lang.String,java.lang.String)[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</td> 
-  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountInformationTest.verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(java.lang.String,java.lang.String)[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</td> 
-  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:30</td>   <td>-5656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyAccountInformationTest.setUp()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:30</td>   <td>-5656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyAccountInformationTest.setUp()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:37</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyAccountInformationTest.tearDown()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:37</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyAccountInformationTest.tearDown()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:30</td>   <td>-5656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyAccountInformationTest.setUp()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:30</td>   <td>-5656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyAccountInformationTest.setUp()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyAccountInformationTest.verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers(java.lang.String,java.lang.String)[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">verifyAccountInfoIsPreFilledOnTheEdiAccountInfoPageForAllUsers</td> 
-  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:37</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyAccountInformationTest.tearDown()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:37</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyAccountInformationTest.tearDown()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:30</td>   <td>-5656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MyAccountInformationTest.setUp()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
-<tr bgcolor="abcebf">  <td>23/01/10 17:41:37</td>   <td>1714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MyAccountInformationTest.tearDown()[pri:0, instance:com.naveenautomation.Tests.MyAccountInformationTest@4082ba93]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1817789863</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>23/01/26 21:21:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UploadsDownloadsTest.tearDown()[pri:0, instance:com.demoqa.Tests.UploadsDownloadsTest@5403f35f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>23/01/26 21:21:20</td>   <td>-22653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UploadsDownloadsTest.verifyUserIsAbleTODownloadFile()[pri:0, instance:com.demoqa.Tests.UploadsDownloadsTest@5403f35f]">verifyUserIsAbleTODownloadFile</td> 
+  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>23/01/26 21:21:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UploadsDownloadsTest.tearDown()[pri:0, instance:com.demoqa.Tests.UploadsDownloadsTest@5403f35f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>23/01/26 21:21:39</td>   <td>-3321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UploadsDownloadsTest.setUp()[pri:0, instance:com.demoqa.Tests.UploadsDownloadsTest@5403f35f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>23/01/26 21:21:43</td>   <td>-60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UploadsDownloadsTest.verifyuploadFunctionality()[pri:0, instance:com.demoqa.Tests.UploadsDownloadsTest@5403f35f]">verifyuploadFunctionality</td> 
+  <td>main@2028265136</td>   <td></td> </tr>
+<tr bgcolor="8f6f80">  <td>23/01/26 21:21:39</td>   <td>-3321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UploadsDownloadsTest.setUp()[pri:0, instance:com.demoqa.Tests.UploadsDownloadsTest@5403f35f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2028265136</td>   <td></td> </tr>
 </table>
